Implement registration for the standard COM in-proc server part. Yet DllGetClassObject is never called.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ features = [
     "Win32_System_SystemServices",
     "Win32_UI_WindowsAndMessaging",
     "Win32_UI_TextServices",
+    "Win32_Security",
+    "Win32_System_Registry",
+    "Win32_System_LibraryLoader"
 ]
 
 [lib]
