Add proper logging.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = "0.4"
+fern = "0.6"
+chrono = "0.4.*"
 
 [dependencies.windows]
 version = "0.*"
