--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,12 @@ name = "ajemi"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 log = "0.4"
 fern = "0.6"
 chrono = "0.4.*"
 winreg = "0.52"
+egui = "0.25"
 
 [dependencies.windows]
 version = "0.*"
@@ -22,8 +21,12 @@ features = [
     "Win32_UI_TextServices",
     "Win32_Security",
     "Win32_System_Registry",
-    "Win32_System_LibraryLoader"
+    "Win32_System_LibraryLoader",
+    "Win32_Graphics_Gdi"
 ]
+
+[build-dependencies]
+winres = "0.1"
 
 [lib]
 crate-type = ["cdylib"]
