--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 log = "0.4"
 fern = "0.6"
-chrono = "0.4.*"
+chrono = "0.4"
 winreg = "0.52"
 parking_lot = "0.12"
 
