Enable configuration on CJK space and separate long pi from other long glyph

--- a/res/conf.toml
+++ b/res/conf.toml
@@ -14,4 +14,6 @@ highlight = 0xE8E8FF
 highlighted = 0x000000
 
 [behavior]
-auto_extend = true
+long_pi = true
+long_glyph = true
+cjk_space = true
