--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ chrono = "0.4"
 winreg = "0.52"
 parking_lot = "0.12"
 toml = "0.8.9"
+anyhow = "1.0.81"
 
 [dependencies.windows]
 version = "0.54.0"
