Turn off long glyphs and CJK spaces by default

--- a/res/conf.toml
+++ b/res/conf.toml
@@ -14,6 +14,6 @@ highlight = 0xE8E8FF
 highlighted = 0x000000
 
 [behavior]
-long_pi = true
-long_glyph = true
-cjk_space = true
+long_pi = false
+long_glyph = false
+cjk_space = false
