--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ chrono = "0.4"
 winreg = "0.52"
 parking_lot = "0.12"
 toml = "0.8.9"
-anyhow = "1.0.81"
+strum = "0.27.1"
+strum_macros = "0.27.1"
+thiserror = "2.0.12"
 
 [dependencies.windows]
 version = "0.54.0"
