--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,8 @@ chrono = "0.4"
 winreg = "0.52"
 parking_lot = "0.12"
 toml = "0.8.9"
-strum = "0.27.1"
-strum_macros = "0.27.1"
+serde = { version = "1.0", features = ["derive"] }
+strum = { version = "0.27.1", features = ["derive"] }
 thiserror = "2.0.12"
 
 [dependencies.windows]
