Introduce log-derive. Simplify some COM related code.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ toml = "0.8.9"
 serde = { version = "1.0", features = ["derive"] }
 strum = { version = "0.27.1", features = ["derive"] }
 thiserror = "2.0.12"
+log-derive = "0.4.1"
 
 [dependencies.windows]
 version = "0.54.0"
