--- a/res/conf.toml
+++ b/res/conf.toml
@@ -14,6 +14,7 @@ highlight = 0xE8E8FF
 highlighted = 0x000000
 
 [behavior]
+toggle = "Ctrl"
 long_pi = false
 long_glyph = false
 cjk_space = false
