--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ serde = { version = "1.0", features = ["derive"] }
 strum = { version = "0.27.1", features = ["derive"] }
 thiserror = "2.0.12"
 log-derive = "0.4.1"
-csscolorparser = "0.7.2"
+csscolorparser = { version = "0.7.2", features = ["serde"] }
 
 [dependencies.windows]
 version = "0.54.0"
@@ -32,7 +32,7 @@ features = [
     "Win32_System_LibraryLoader",
     "Win32_Graphics_Gdi",
     "Win32_System_Ole",
-    "Win32_System_Variant"
+    "Win32_System_Variant",
 ]
 
 [build-dependencies]
